[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
chrono = "0.4.39"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
serde_with = "3.11.0"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.41.1"
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
cargo-manifest = "0.17.0"
