[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros", "multipart"] }
base64 = "0.22.1"
cargo-manifest = "0.17.0"
chrono = "0.4.39"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
serde_yaml = "0.9.34"
serde_with = "3.11.0"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.2", features = ["chrono", "uuid"] }
thiserror = "2.0.9"
tokio = "1.42.0"
toml = "0.8.19"
tracing = "0.1.41"
uuid = "1.11.0"
html-escape = "0.2.13"
hex = "0.4.3"
